@@ -25,7 +25,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.sonar.check.Rule;
 import org.sonar.java.checks.helpers.QuickFixHelper;
@@ -253,7 +252,7 @@ public class CollectionImplementationReferencedCheck extends BaseTreeVisitor imp
     checkIfAllowed(tree.returnType(), "The return type of this method");
     List<VariableTree> candidateParameters = tree.parameters().stream()
       .filter(it -> getSuggestedInterface(it.type()) != null)
-      .collect(Collectors.toList());
+      .toList();
     if (candidateParameters.isEmpty()) {
       return;
     }
