@@ -24,7 +24,6 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.sonar.check.Rule;
 import org.sonar.java.checks.helpers.QuickFixHelper;
 import org.sonar.java.reporting.JavaQuickFix;
@@ -74,7 +73,7 @@ public class OmitPermittedTypesCheck extends IssuableSubscriptionVisitor {
           .withMessage(MESSAGE)
           .withSecondaries(permittedTypes.stream().map(t ->
             new JavaFileScannerContext.Location("Permitted type", t))
-            .collect(Collectors.toList()))
+            .toList())
           .withQuickFix(() -> getQuickFix(permitsKeyword, permittedTypes))
           .report();
       }
