@@ -22,7 +22,6 @@ package org.sonar.java.checks.tests;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.sonar.check.Rule;
 import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
@@ -102,6 +101,6 @@ public class RandomizedTestDataCheck extends IssuableSubscriptionVisitor {
   private static List<JavaFileScannerContext.Location> convertToLocations(Stream<Tree> trees) {
     return trees
       .map(tree -> new JavaFileScannerContext.Location(LOCATIONS_TEXT, tree))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
