@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import javax.annotation.Nullable;
 import org.junit.jupiter.api.BeforeEach;
@@ -661,7 +660,7 @@ class InternalJavaIssueBuilderTest {
     @Override
     public NewIssue setCodeVariants(@org.jetbrains.annotations.Nullable Iterable<String> iterable) {
       codeVariants = iterable == null ? null : StreamSupport.stream(iterable.spliterator(), false)
-        .collect(Collectors.toList());
+        .toList();
       return this;
     }
 
