@@ -24,7 +24,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -68,7 +67,7 @@ public final class SurefireUtils {
         .map(String::trim)
         .map(path -> getFileFromPath(fs, pathResolver, path))
         .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .toList();
     }
     return null;
   }
